--- a/duty/templates/duty/enter_head_count.html
+++ b/duty/templates/duty/enter_head_count.html
@@ -190,7 +190,7 @@
                         <a class="nav-link" href="/dashboard/" style="color: black;">Dashboard</a>
                     </li>
                     <li class="nav-item" style="list-style-type: none;">
-                        <span class="navbar-text" style="color: black;">Welcome, Sarunsaji31!</span>
+                        <span class="navbar-text" style="color: black;">Welcome, {{ staff_name }}!</span>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/logout/" style="color: black;">Logout</a>
