--- a/duty/templates/duty/home.html
+++ b/duty/templates/duty/home.html
@@ -161,7 +161,7 @@
 
     <div class="header-section">
         <span class="staff-name">Welcome, {{ staff_name }}!</span>
-        <img src="https://et.ae/wp-content/uploads/2020/03/Logo.svg" alt="Logo">
+        <img src="https://et.ae/assets/images/logo.svg" alt="Logo">
         <h1>Welcome to OCC-EKG project</h1>
         <p>Manage and track driver details and trip information efficiently.</p>
     </div>
